crates/k-rust/src/parser/snapshots/kore_rs__parser__sentence__tests__axiom_declaration.snap
---
source: crates/k-rust/src/parser/sentence.rs
description: "KORE sentence:\n\naxiom{S} \\equals{S, SortBool{}}(id{S}(X:S), X:S) [simplification{}()]\n"
---
Axiom {
    parameters: [
        "S",
    ],
    pattern: Equals {
        operand_sort: Variable(
            "S",
        ),
        result_sort: Application {
            name: "SortBool",
            arguments: [],
        },
        left: Application {
            symbol: Symbol {
                name: "id",
                sort_parameters: [
                    Variable(
                        "S",
                    ),
                ],
            },
            arguments: [
                Variable(
                    Variable {
                        kind: Element,
                        name: "X",
                        sort: Variable(
                            "S",
                        ),
                    },
                ),
            ],
        },
        right: Variable(
            Variable {
                kind: Element,
                name: "X",
                sort: Variable(
                    "S",
                ),
            },
        ),
    },
    attributes: Attributes(
        [
            Application {
                symbol: Symbol {
                    name: "simplification",
                    sort_parameters: [],
                },
                arguments: [],
            },
        ],
    ),
}
